[project]
name = "comfyui-imagetagger"
description = "NODES:AIRedoon Image Caption.\nAnalyze image tagger"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "pillow", "requests"]

[project.urls]
Repository = "https://github.com/purpen/ComfyUI-ImageTagger"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ImageTagger"
Icon = ""
